<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Share-A-Ride</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_driver_passenger">DriverPassenger</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_driver_request">driver_request</string>
    <string name="title_activity_pssnger_requested">PssngerRequested</string>
    <string name="action_search">Search</string>
    <string name="pick_time">Pick Time</string>
    <string name="request">Request</string>

    <string name="str_atv_places">Enter Destination Here</string>
    <string name="login">Log in</string>
    <string name="passenger">Passenger</string>
    <string name="driver">Driver</string>
    <string name="request_message">Waiting for requests...</string>
    <string name="wait_message">Please wait...</string>
    <string name="estimated_fare">Maximum Fare: </string>
    <string name="accumulated_fare">Accumulated Fare: </string>
    <string name="max_time">Estimated Time: </string>
    <string name="current_location">You are currently at</string>
    <string name="current_text">here!</string>
    <string name="destination_text">Where do you want to go?</string>
    <string name="riders_text">How many people are with you?</string>
    <string name="num_riders_text">Number of Riders</string>
    <string name="mood_text">What is your current mood?</string>
    <string name="ride_request_text">Request a Ride</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="minutes">minutes</string>
    <string name="driver_text_1">Your driver is </string>
    <string name="driver_text_2"> min away from you</string>
    <string name="complete_task_text">Complete Task</string>
    <string name="task_completed_text">Task Completed!</string>
    <string name="your_destination">Your destination:</string>

    <string name="title_activity_driver_home">DriverHome</string>

    <string-array name="user_type">
        <item>I am a Passenger</item>
        <item>I am a Driver</item>
    </string-array>

    <string-array name="mood">
        <item>I would like to save money!</item>
        <item>I am indifferent.</item>
        <item>I am in a rush!</item>
    </string-array>

    <string name="title_activity_passenger">Passenger</string>

    <string name="pickUp">pickupPassenger</string>
    <string name="startRide">startRide</string>
    <string name="endRide">endRide</string>
    <string name="travel_time">Travel Time: </string>
    <string name="actual_fare">Actual Fare: </string>
    <string name="actual_distance">Actual Distance</string>
    <string name="miles">miles</string>
    <string name="estimated_distance">Estimated Distance</string>


</resources>
