<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/Theme.SARTheme"
            android:background="@color/material_deep_teal_500">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:paddingBottom="@dimen/activity_vertical_margin"
                  android:paddingLeft="@dimen/activity_horizontal_margin"
                  android:paddingRight="@dimen/activity_horizontal_margin"
                  android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/youAreAtText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/current_location"
            android:textColor="@android:color/white"
            android:textSize="28sp"/>

        <TextView
            android:id="@+id/currentLocationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/youAreAtText"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="80dp"
            android:layout_marginTop="16dp"
            android:text="@string/current_text"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textAlignment="center"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/card_background"
            android:padding="16dp" >

            <TextView
                android:id="@+id/whereToGoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destination_text"
                android:textColor="@color/material_grey_500"
                android:textSize="20sp"/>

            <edu.cmu.andrew.utilities.CustomAutoCompleteTextView
                android:id="@+id/whereToGoInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/whereToGoText"
                android:textColor="@color/material_grey_500"
                android:textSize="20sp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/card_background"
            android:padding="16dp" >

            <TextView
                android:id="@+id/ridersText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/riders_text"
                android:textColor="@color/material_grey_500"
                android:textSize="20sp"/>

            <SeekBar
                android:id="@+id/ridersInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ridersText"
                android:max="3"/>

            <TextView
                android:id="@+id/ridersOutput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ridersInput"
                android:text="@string/num_riders_text"
                android:textColor="@color/material_grey_500"
                android:textSize="20sp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/card_background"
            android:padding="16dp" >

            <TextView
                android:id="@+id/moodText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mood_text"
                android:textColor="@color/material_grey_500"
                android:textSize="20sp"/>

            <Spinner
                android:id="@+id/moodInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/moodText"
                android:textColor="@color/material_grey_500"
                android:textSize="20sp"
                android:entries="@array/mood"
                android:spinnerMode="dropdown"
                android:layout_margin="16dp" />

        </RelativeLayout>

        <Button
            android:id="@+id/passInputNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/material_red_500"
            android:text="@string/ride_request_text"
            android:theme="@style/Theme.SARTheme.Button"
            android:layout_gravity="center"
            android:layout_alignParentBottom="true"/>

    </LinearLayout>
</ScrollView>